Regex from config
Added fields in config.json to store electrodes and waves used.
Modified data.py to utilize these when creating the regex that reduces the dataframe of EEG data.

--- a/DataPipe.ipynb
+++ b/DataPipe.ipynb
@@ -24,8 +24,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.7.9 (default, Aug 31 2020, 07:22:35) \n",
-      "[Clang 10.0.0 ]\n"
+      "3.7.9 (default, Aug 31 2020, 17:10:11) [MSC v.1916 64 bit (AMD64)]\n"
      ]
     }
    ],
@@ -49,38 +48,38 @@
       "nback\n",
       "nback\n",
       "nback\n",
+      "control\n",
+      "control\n",
       "nback\n",
       "nback\n",
       "nback\n",
       "nback\n",
       "nback\n",
       "control\n",
-      "control\n",
-      "control\n",
-      "nback\n",
-      "nback\n",
       "nback\n",
       "nback\n",
       "nback\n",
       "nback\n",
       "nback\n",
       "control \n",
+      "control\n",
+      "control\n",
+      "control\n",
+      "control\n",
+      "control\n",
+      "nback\n",
+      "nback\n",
       "nback\n",
       "nback\n",
-      "control\n",
       "nback\n",
       "nback\n",
-      "control\n",
-      "control\n",
-      "control\n",
-      "control\n",
       "nback\n"
      ]
     }
    ],
    "source": [
     "# MAKE SURE datapath IS CORRECT\n",
-    "datapath = \"/Users/eddiechandler/Documents/WashU/Neurotechnology_Club/Data/OneDrive-2020-11-28-2/\"\n",
+    "datapath = \"E:\\\\WashU\\\\Neurotech_Club\\\\Data\\\\OneDrive-2020-11-28-2\\\\\"\n",
     "print(len(glob.glob(datapath+\"*.csv\")))\n",
     "subjects = [\"bradley\", \"johnathan\", \"vishal\", \"parker\"] # there are no control files for bradley\n",
     "count = 0\n",
@@ -93,7 +92,7 @@
     "    for f in subj_files:\n",
     "        count+=1\n",
     "        \n",
-    "        task_type = f.split(\"/\")[-1].split(\"_\")[1] # nback or control\n",
+    "        task_type = f.split(\"\\\\\")[-1].split(\"_\")[1] # nback or control\n",
     "        \n",
     "        print(task_type)\n",
     "        temp = pd.read_csv(f, skiprows=1)\n",
@@ -173,15 +172,15 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1.606347e+09</td>\n",
-       "      <td>15.0</td>\n",
+       "      <td>19.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>4262.051270</td>\n",
-       "      <td>4226.794922</td>\n",
-       "      <td>4253.333496</td>\n",
-       "      <td>4209.615234</td>\n",
-       "      <td>4233.333496</td>\n",
-       "      <td>4162.051270</td>\n",
-       "      <td>4204.487305</td>\n",
+       "      <td>4199.102539</td>\n",
+       "      <td>4148.205078</td>\n",
+       "      <td>4215.512695</td>\n",
+       "      <td>4168.974121</td>\n",
+       "      <td>4200.128418</td>\n",
+       "      <td>4191.282227</td>\n",
+       "      <td>4214.871582</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -197,15 +196,15 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1.606347e+09</td>\n",
-       "      <td>16.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>4260.641113</td>\n",
-       "      <td>4248.717773</td>\n",
-       "      <td>4248.077148</td>\n",
-       "      <td>4222.436035</td>\n",
-       "      <td>4234.743652</td>\n",
-       "      <td>4161.538574</td>\n",
-       "      <td>4202.820313</td>\n",
+       "      <td>4202.948730</td>\n",
+       "      <td>4146.538574</td>\n",
+       "      <td>4216.922852</td>\n",
+       "      <td>4177.436035</td>\n",
+       "      <td>4202.179688</td>\n",
+       "      <td>4189.358887</td>\n",
+       "      <td>4216.794922</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -221,15 +220,15 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1.606347e+09</td>\n",
-       "      <td>17.0</td>\n",
+       "      <td>21.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>4271.025879</td>\n",
-       "      <td>4258.205078</td>\n",
-       "      <td>4263.974121</td>\n",
-       "      <td>4174.743652</td>\n",
-       "      <td>4225.512695</td>\n",
-       "      <td>4151.153809</td>\n",
-       "      <td>4199.743652</td>\n",
+       "      <td>4207.307617</td>\n",
+       "      <td>4149.230957</td>\n",
+       "      <td>4216.410156</td>\n",
+       "      <td>4186.538574</td>\n",
+       "      <td>4201.922852</td>\n",
+       "      <td>4190.641113</td>\n",
+       "      <td>4218.589844</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -245,15 +244,15 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1.606347e+09</td>\n",
-       "      <td>18.0</td>\n",
+       "      <td>22.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>4258.461426</td>\n",
-       "      <td>4243.974121</td>\n",
-       "      <td>4269.102539</td>\n",
-       "      <td>4164.487305</td>\n",
-       "      <td>4224.743652</td>\n",
-       "      <td>4147.563965</td>\n",
-       "      <td>4194.743652</td>\n",
+       "      <td>4197.051270</td>\n",
+       "      <td>4158.077148</td>\n",
+       "      <td>4218.589844</td>\n",
+       "      <td>4186.666504</td>\n",
+       "      <td>4201.666504</td>\n",
+       "      <td>4189.871582</td>\n",
+       "      <td>4215.641113</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -269,26 +268,26 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1.606347e+09</td>\n",
-       "      <td>19.0</td>\n",
+       "      <td>23.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>4257.820313</td>\n",
-       "      <td>4239.358887</td>\n",
-       "      <td>4253.461426</td>\n",
-       "      <td>4198.589844</td>\n",
-       "      <td>4227.692383</td>\n",
-       "      <td>4156.282227</td>\n",
-       "      <td>4202.051270</td>\n",
+       "      <td>4201.922852</td>\n",
+       "      <td>4147.820313</td>\n",
+       "      <td>4217.436035</td>\n",
+       "      <td>4177.436035</td>\n",
+       "      <td>4191.538574</td>\n",
+       "      <td>4185.256348</td>\n",
+       "      <td>4216.025879</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>8.043087</td>\n",
+       "      <td>1.2325</td>\n",
+       "      <td>1.862697</td>\n",
+       "      <td>0.748757</td>\n",
+       "      <td>0.440942</td>\n",
+       "      <td>3.648506</td>\n",
+       "      <td>1.338751</td>\n",
+       "      <td>1.015494</td>\n",
+       "      <td>0.474398</td>\n",
+       "      <td>0.394639</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -297,32 +296,32 @@
       ],
       "text/plain": [
        "      Timestamp  EEG.Counter  EEG.Interpolated      EEG.AF3       EEG.F7  \\\n",
-       "0  1.606347e+09         15.0               0.0  4262.051270  4226.794922   \n",
-       "1  1.606347e+09         16.0               0.0  4260.641113  4248.717773   \n",
-       "2  1.606347e+09         17.0               0.0  4271.025879  4258.205078   \n",
-       "3  1.606347e+09         18.0               0.0  4258.461426  4243.974121   \n",
-       "4  1.606347e+09         19.0               0.0  4257.820313  4239.358887   \n",
+       "0  1.606347e+09         19.0               0.0  4199.102539  4148.205078   \n",
+       "1  1.606347e+09         20.0               0.0  4202.948730  4146.538574   \n",
+       "2  1.606347e+09         21.0               0.0  4207.307617  4149.230957   \n",
+       "3  1.606347e+09         22.0               0.0  4197.051270  4158.077148   \n",
+       "4  1.606347e+09         23.0               0.0  4201.922852  4147.820313   \n",
        "\n",
        "        EEG.F3      EEG.FC5       EEG.T7       EEG.P7       EEG.O1  ...  \\\n",
-       "0  4253.333496  4209.615234  4233.333496  4162.051270  4204.487305  ...   \n",
-       "1  4248.077148  4222.436035  4234.743652  4161.538574  4202.820313  ...   \n",
-       "2  4263.974121  4174.743652  4225.512695  4151.153809  4199.743652  ...   \n",
-       "3  4269.102539  4164.487305  4224.743652  4147.563965  4194.743652  ...   \n",
-       "4  4253.461426  4198.589844  4227.692383  4156.282227  4202.051270  ...   \n",
+       "0  4215.512695  4168.974121  4200.128418  4191.282227  4214.871582  ...   \n",
+       "1  4216.922852  4177.436035  4202.179688  4189.358887  4216.794922  ...   \n",
+       "2  4216.410156  4186.538574  4201.922852  4190.641113  4218.589844  ...   \n",
+       "3  4218.589844  4186.666504  4201.666504  4189.871582  4215.641113  ...   \n",
+       "4  4217.436035  4177.436035  4191.538574  4185.256348  4216.025879  ...   \n",
        "\n",
        "   POW.F8.Theta  POW.F8.Alpha  POW.F8.BetaL  POW.F8.BetaH  POW.F8.Gamma  \\\n",
        "0           NaN           NaN           NaN           NaN           NaN   \n",
        "1           NaN           NaN           NaN           NaN           NaN   \n",
        "2           NaN           NaN           NaN           NaN           NaN   \n",
        "3           NaN           NaN           NaN           NaN           NaN   \n",
-       "4           NaN           NaN           NaN           NaN           NaN   \n",
+       "4      8.043087        1.2325      1.862697      0.748757      0.440942   \n",
        "\n",
        "   POW.AF4.Theta  POW.AF4.Alpha  POW.AF4.BetaL  POW.AF4.BetaH  POW.AF4.Gamma  \n",
        "0            NaN            NaN            NaN            NaN            NaN  \n",
        "1            NaN            NaN            NaN            NaN            NaN  \n",
        "2            NaN            NaN            NaN            NaN            NaN  \n",
        "3            NaN            NaN            NaN            NaN            NaN  \n",
-       "4            NaN            NaN            NaN            NaN            NaN  \n",
+       "4       3.648506       1.338751       1.015494       0.474398       0.394639  \n",
        "\n",
        "[5 rows x 151 columns]"
       ]
