--- a/EEG_RNN.ipynb
+++ b/EEG_RNN.ipynb
@@ -285,34 +285,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Ry_OZnYSB2gV",
-        "outputId": "24a16a10-96da-4e9f-8829-769694bf3874"
-      },
-      "source": [
-        "data.shape"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(9536, 3)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "AeUewWjSwkj5"
       },
       "source": [
@@ -341,7 +313,7 @@
         "outputId": "8cca1c1c-94e6-445d-f6ee-b82fcdfa0c7b"
       },
       "source": [
-        "model = make_model(X_train[0].shape)"
+        "model = make_model(X_new[0].shape)"
       ],
       "execution_count": null,
       "outputs": [
@@ -416,7 +388,7 @@
         "outputId": "6c82ee8f-8605-44f2-8e44-4c94ec82720e"
       },
       "source": [
-        "history = model.fit(x=X_train, y=y_train, epochs=1)"
+        "history = model.fit(x=X_new, y=Y_new, epochs=1)"
       ],
       "execution_count": null,
       "outputs": [
@@ -435,7 +407,7 @@
         "id": "YUxjiYwrGcHj"
       },
       "source": [
-        "preds=model.predict(X_train)"
+        "preds=model.predict(X_new)"
       ],
       "execution_count": null,
       "outputs": []
